# ResearchCodeManager

./: CMakeLists.txt  addcodedialog.h  addcodedialog.ui  addresearchdialog.cpp  addresearchdialog.h  addresearchdialog.ui  addresultdialog.h  addresultdialog.ui  assertions.md  codemanager.cpp  codemanager.h  main.cpp  readme.md  research_code_manager_zh_CN.qm  research_code_manager_zh_CN.ts  researchcodemanager.cpp  researchcodemanager.h  resources.qrc  safedialog.cpp  safedialog.h  version_list.json
manager/: CMakeLists.txt  addcodedialog.cpp  addresearchdialog.h  addresultdialog.cpp  addresultdialog.h  codemanager.h  constant.h  err_code.h  file_db.sqlite  main.cpp  researchcodemanager.cpp  researchcodemanager.ui  safedialog.ui
updater/: CMakeLists.txt  checkanddownload.cpp  checkanddownload.h  checkanddownload.ui  checker.cpp  checker.h  downloader.cpp  downloader.h  enumeration.h  main.cpp  overrideold.cpp  overrideold.h  overrideold.ui  proxysettingdialog.cpp  proxysettingdialog.h  proxysettingdialog.ui  removenew.cpp  removenew.h  removenew.ui  resources.qrc  unzipper.cpp  unzipper.h  updater_zh_CN.qm  updater_zh_CN.ts
